dev/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: yas-dev
  labels:
    app: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
  - port: 80
    targetPort: 80
